--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <section class="hero">
       <!-- IMAGEN DEL LIBRO -->
       <div style="margin: 20px 0;">
-        <img src="libro.jpg" alt="Manual del SER Humano" style="width: 220px; border-radius: 8px; box-shadow: 0 10px 30px rgba(0,0,0,0.3);">
+        <img src="Foto.jpg" alt="Manual del SER Humano" style="width: 220px; border-radius: 8px; box-shadow: 0 10px 30px rgba(0,0,0,0.3);">
       </div>
       
       <h1>Esto no es un libro cualquiera</h1>
