--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <section class="formulario" id="comprar">
     <!-- IMAGEN DEL LIBRO PEQUEÑA -->
     <div style="margin: 20px 0;">
-        <img src="libro.jpg" alt="Manual del SER Humano" style="width: 120px; border-radius: 6px; box-shadow: 0 8px 20px rgba(0,0,0,0.2);">
+        <img src="Foto.jpg" alt="Manual del SER Humano" style="width: 120px; border-radius: 6px; box-shadow: 0 8px 20px rgba(0,0,0,0.2);">
     </div>
     
     <h3 style="margin-bottom: 20px; color: #8A2BE2;">Adquiere el manual</h3>
@@ -151,10 +151,7 @@
     
     <!-- BOTÓN DE HOTMART -->
     <div style="margin: 30px 0;">
-        <a href="https://go.hotmart.com/N100172556W" 
-           target="_blank" 
-           rel="noopener"
-           class="btn-hotmart pulse">
+        <a href="https://go.hotmart.com/N100172556W" target="_blank" class="btn-hotmart pulse">
             🔓 ACTIVAR MI DESPERTAR AHORA
         </a>
     </div>
@@ -180,10 +177,7 @@
 
 <!-- CTA FINAL -->
 <section style="margin: 40px 0; text-align: center;">
-    <a href="https://go.hotmart.com/N100172556W" 
-       target="_blank" 
-       rel="noopener"
-       class="btn-primary pulse">
+    <a href="https://go.hotmart.com/N100172556W" target="_blank" class="btn-primary pulse">
         💫 INICIAR MI RENACIMIENTO
     </a>
 </section>
