--- a/index.html
+++ b/index.html
@@ -1,52 +1,150 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Manual del SER Humano</title>
 
+  <!-- Importar widget de Hotmart -->
+  <script type="text/javascript">
+    function importHotmart(){
+      var imported = document.createElement('script');
+      imported.src = 'https://static.hotmart.com/checkout/widget.min.js';
+      document.head.appendChild(imported);
+      var link = document.createElement('link');
+      link.rel = 'stylesheet';
+      link.type = 'text/css';
+      link.href = 'https://static.hotmart.com/css/hotmart-fb.min.css';
+      document.head.appendChild(link);
+    }
+    importHotmart();
+  </script>
+
   <style>
-    /* Estilos base */
-    .guarantee {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #fff;
+      color: #222;
+    }
+    .container {
+      max-width: 480px;
+      margin: 0 auto;
       padding: 20px;
-      border-radius: 10px;
       text-align: center;
+    }
+    .hero {
+      margin-top: 60px;
+    }
+    .hero h1 {
+      font-size: 2rem;
+      margin-bottom: 16px;
+    }
+    .hero p {
+      font-size: 1rem;
+      margin-bottom: 24px;
+      opacity: 0.8;
+    }
+    .btn-primary {
+      display: inline-block;
+      padding: 12px 32px;
+      font-size: 1rem;
+      text-decoration: none;
+      color: #fff;
+      background: linear-gradient(90deg, #8A2BE2, #DA70D6);
+      border-radius: 24px;
+      margin-bottom: 40px;
+      transition: background 0.2s;
+    }
+    .btn-primary:hover {
+      background: linear-gradient(90deg, #DA70D6, #8A2BE2);
+    }
+    .price {
+      margin: 20px 0;
+    }
+    .price-new {
+      font-size: 1.5rem;
+      color: #FF1493;
+      font-weight: bold;
+    }
+    .oscillate {
+      animation: oscillate 2s ease-in-out infinite;
+    }
+    @keyframes oscillate {
+      0% { transform: translateX(0px) scale(1); }
+      25% { transform: translateX(-3px) scale(1.02); }
+      50% { transform: translateX(3px) scale(1.05); }
+      75% { transform: translateX(-2px) scale(1.02); }
+      100% { transform: translateX(0px) scale(1); }
+    }
+    .benefits {
+      margin: 40px 0;
+      text-align: left;
+    }
+    .benefit-item {
+      margin: 15px 0;
+      font-size: 0.9rem;
+      padding-left: 20px;
+      position: relative;
+    }
+    .benefit-item:before {
+      content: "✓";
+      position: absolute;
+      left: 0;
+      color: #8A2BE2;
+      font-weight: bold;
+    }
+    .testimonial {
+      font-style: italic;
       margin: 30px 0;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      padding: 20px;
+      background: #f8f9fa;
+      border-radius: 8px;
+      border-left: 4px solid #8A2BE2;
+    }
+    .testimonial-author {
+      color: #666;
+      font-size: 0.85rem;
+      margin-top: 10px;
+    }
+    .guarantee {
+      font-size: 0.9rem;
+      color: #666;
+      margin: 20px 0;
+      padding: 15px;
+      background: rgba(39,174,96,0.1);
+      border-radius: 8px;
+      border: 1px solid rgba(39,174,96,0.3);
     }
     .formulario {
-      background: white;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 15px 35px rgba(0,0,0,0.1);
-      text-align: center;
-      margin: 30px 0;
-      position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      margin-bottom: 40px;
     }
-    .btn-hotmart {
-      background: linear-gradient(135deg, #ff6b35 0%, #f7931e 100%);
-      color: white;
-      padding: 18px 40px;
+    .formulario img {
+      width: 120px;
+      border-radius: 6px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      margin: 20px auto;
+    }
+    .formulario h3 {
+      color: #8A2BE2;
+      margin-bottom: 20px;
+    }
+    form button {
+      padding: 12px;
+      font-size: 1rem;
+      background: #FF1493;
+      color: #fff;
       border: none;
-      border-radius: 50px;
-      font-size: 1.2rem;
-      font-weight: bold;
-      text-decoration: none;
-      display: inline-block;
-      transition: all 0.3s ease;
-      box-shadow: 0 8px 25px rgba(255, 107, 53, 0.3);
-      text-transform: uppercase;
-      letter-spacing: 1px;
+      border-radius: 8px;
       cursor: pointer;
-      position: relative;
-      z-index: 10;
+      transition: background 0.2s;
     }
-    .btn-hotmart:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 12px 35px rgba(255, 107, 53, 0.4);
-      background: linear-gradient(135deg, #e55a2b 0%, #e8851a 100%);
+    form button:hover {
+      background: #FF69B4;
     }
     .pulse {
       animation: pulse 2s infinite;
@@ -56,150 +154,102 @@
       50% { transform: scale(1.05); }
       100% { transform: scale(1); }
     }
-    .urgencia {
-      background: #ff4757;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 25px;
-      font-size: 0.9rem;
-      margin: 15px 0;
-      display: inline-block;
-      animation: blink 1.5s infinite;
-    }
-    @keyframes blink {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0.7; }
-    }
-    .testimonial {
-      background: #f8f9fa;
-      padding: 25px;
-      border-radius: 10px;
-      margin: 30px 0;
-      font-style: italic;
-      border-left: 4px solid #8A2BE2;
-      color: #333;
-    }
-    .testimonial-author {
-      margin-top: 15px;
-      font-weight: bold;
-      color: #8A2BE2;
-    }
-    .btn-primary {
-      background: linear-gradient(135deg, #8A2BE2 0%, #4B0082 100%);
-      color: white;
-      padding: 15px 35px;
-      border: none;
-      border-radius: 50px;
-      font-size: 1.1rem;
-      font-weight: bold;
-      text-decoration: none;
-      display: inline-block;
-      transition: all 0.3s ease;
-      box-shadow: 0 8px 25px rgba(138, 43, 226, 0.3);
-      cursor: pointer;
-      position: relative;
-      z-index: 10;
-    }
-    .btn-primary:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 12px 35px rgba(138, 43, 226, 0.4);
-    }
     footer {
-      text-align: center;
-      padding: 30px;
-      background: #2c3e50;
-      color: white;
-      margin-top: 50px;
+      font-size: 0.8rem;
+      opacity: 0.6;
+      margin-top: 60px;
     }
   </style>
-
-  <!-- Importar widget de Hotmart -->
-  <script>
-    function importHotmart() {
-      var js = document.createElement('script');
-      js.src = 'https://static.hotmart.com/checkout/widget.min.js';
-      js.async = true;
-      document.head.appendChild(js);
-
-      var css = document.createElement('link');
-      css.rel = 'stylesheet';
-      css.href = 'https://static.hotmart.com/css/hotmart-fb.min.css';
-      document.head.appendChild(css);
-    }
-    importHotmart();
-  </script>
 </head>
-
 <body>
+  <div class="container">
+    <!-- HERO -->
+    <section class="hero">
+      <div style="margin: 20px 0;">
+        <img src="https://i.imgur.com/lNVRGt6.jpg" alt="Manual del SER Humano">
+      </div>
+      <h1>Esto no es un libro cualquiera</h1>
+      <p>Este manual es un espejo. Te mostrará lo que necesitas recordar,<br/>incluso si te incomoda. ¿Estás listo para crear tu nueva versión?</p>
+      <div class="price">
+        <span class="price-new oscillate">✨ ACCESO INMEDIATO ✨</span>
+      </div>
+      <a href="https://pay.hotmart.com/N100172556W?checkoutMode=2" class="hotmart__button-checkout btn-primary pulse" data-code="N100172556W" data-checkout-mode="2">🧠 Transformar mi vida ahora</a>
+    </section>
 
-  <!-- GARANTÍA -->
-  <section class="guarantee">
-    🛡️ <strong>Garantía de 7 días</strong><br>
-    Tranquilo, si este manual no es lo que esperabas te devuelvo el 100% de tu dinero
-  </section>
+    <!-- BENEFICIOS -->
+    <section class="benefits">
+      <div class="benefit-item">Descubre cómo funcionas y por qué</div>
+      <div class="benefit-item">Re-descubre tus sentidos</div>
+      <div class="benefit-item">Cómo salir del infierno</div>
+      <div class="benefit-item">Cómo reprogramarte</div>
+      <div class="benefit-item">Cómo alcanzar el estado de flow</div>
+    </section>
 
-  <!-- SECCIÓN DE COMPRA CON HOTMART -->
-  <section class="formulario" id="comprar">
-    <div style="margin: 20px 0;">
-      <img src="Foto.jpg" alt="Manual del SER Humano" style="width: 120px; border-radius: 6px; box-shadow: 0 8px 20px rgba(0,0,0,0.2);">
-    </div>
-    <h3 style="margin-bottom: 20px; color: #8A2BE2;">Adquiere el manual</h3>
-    <div class="urgencia">⏰ OFERTA LIMITADA</div>
-    <div style="margin: 30px 0;">
-      <a
-        href="https://pay.hotmart.com/N100172556W?checkoutMode=2"
-        class="hotmart__button-checkout btn-hotmart pulse"
-        data-code="N100172556W"
-        data-checkout-mode="2"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        🔓 ACTIVAR MI DESPERTAR AHORA
-      </a>
-    </div>
-    <p style="font-size: 0.8rem; color: #666; margin-top: 10px;">
-      ⚡ Acceso inmediato • 🔒 Pago seguro • 🎯 Resultados garantizados
-    </p>
-    <div style="margin-top: 20px; font-size: 0.9rem; color: #555;">
-      ✅ Descarga inmediata<br>
-      ✅ Acceso de por vida<br>
-      ✅ Soporte 24/7<br>
-      ✅ Actualizaciones gratuitas
-    </div>
-  </section>
+    <!-- OFERTA IMPERDIBLE -->
+    <section style="background: linear-gradient(135deg, #8A2BE2, #DA70D6); color: white; padding: 30px 20px; border-radius: 15px; margin: 40px 0; text-align: center;">
+      <h3 style="margin-bottom: 20px; font-size: 1.3rem;">🔥 OFERTA IMPERDIBLE 🔥</h3>
+      <p style="font-size: 1rem; margin-bottom: 20px; font-weight: bold;">Si compras el Manual del SER Humano recibes 3 bonos adicionales:</p>
+      <div style="text-align: left; margin: 20px 0;">
+        <div style="margin: 15px 0; padding-left: 25px; position: relative;"><span style="position: absolute; left: 0; top: 0;">⚡</span><strong>+ Las Leyes Invisibles</strong></div>
+        <div style="margin: 15px 0; padding-left: 25px; position: relative;"><span style="position: absolute; left: 0; top: 0;">🧸</span><strong>+ Sanando tu Niño Interior</strong></div>
+        <div style="margin: 15px 0; padding-left: 25px; position: relative;"><span style="position: absolute; left: 0; top: 0;">👥</span><strong>+ Acceso a la Comunidad</strong></div>
+      </div>
+      <div style="border-top: 2px solid rgba(255,255,255,0.3); padding-top: 20px; margin-top: 25px;">
+        <p style="font-size: 1.3rem; font-weight: bold; margin: 15px 0;">✨ ACCESO INMEDIATO A TODO ✨</p>
+        <p style="font-size: 1rem; opacity: 0.9; margin: 10px 0;">🎯 Transformación completa garantizada</p>
+        <a href="https://pay.hotmart.com/N100172556W?checkoutMode=2" class="hotmart__button-checkout btn-primary pulse" data-code="N100172556W" data-checkout-mode="2" style="background: rgba(255,255,255,0.2); border: 2px solid white;">💫 OBTENER TODO AHORA</a>
+      </div>
+    </section>
 
-  <!-- SEGUNDO TESTIMONIAL -->
-  <section class="testimonial">
-    "Mi autoconcepto cambió completamente. Dejé de identificarme con mis pensamientos limitantes y encontré mi verdadera esencia."
-    <div class="testimonial-author">– Carlos R., Psicólogo</div>
-  </section>
+    <!-- TESTIMONIAL -->
+    <section class="testimonial">
+      "Después de leer este manual, por primera vez en años pude acceder a mi estado de flow. Las técnicas son claras y realmente funcionan."
+      <div class="testimonial-author">- María G., Artista</div>
+    </section>
 
-  <!-- CTA FINAL -->
-  <section style="margin: 40px 0; text-align: center;">
-    <a
-      href="https://pay.hotmart.com/N100172556W?checkoutMode=2"
-      class="hotmart__button-checkout btn-primary pulse"
-      data-code="N100172556W"
-      data-checkout-mode="2"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      💫 INICIAR MI RENACIMIENTO
-    </a>
-  </section>
+    <!-- GARANTÍA -->
+    <section class="guarantee">
+      🛡️ <strong>Garantía de 7 días</strong><br/>
+      Tranquilo, si este manual no es lo que esperabas te devuelvo el 100% de tu dinero
+    </section>
 
-  <!-- FOOTER -->
-  <footer>
-    © 2025 Manual del SER Humano · @sufrimosporquequeremos<br>
-    <small>Garantía de satisfacción • Pago seguro • Descarga inmediata</small>
-  </footer>
+    <!-- FORMULARIO -->
+    <section class="formulario" id="comprar">
+      <img src="https://i.imgur.com/lNVRGt6.jpg" alt="Manual del SER Humano">
+      <h3>Obtén tu copia digital inmediata</h3>
+      <form onsubmit="window.open('https://go.hotmart.com/N100172556W','_blank'); return false;">
+        <input type="text" placeholder="Nombre completo" required />
+        <input type="email" placeholder="Correo electrónico" required />
+        <button type="submit" class="pulse">🔓 ACTIVAR MI DESPERTAR</button>
+      </form>
+      <p style="font-size: 0.8rem; color: #666;">⚡ Acceso inmediato • 🔒 Pago seguro • 🎯 Resultados garantizados</p>
+    </section>
+
+    <!-- SEGUNDO TESTIMONIAL -->
+    <section class="testimonial">
+      "Mi autoconcepto cambió completamente. Dejé de identificarme con mis pensamientos limitantes y encontré mi verdadera esencia."
+      <div class="testimonial-author">- Carlos R., Psicólogo</div>
+    </section>
+
+    <!-- CTA FINAL -->
+    <section style="margin: 40px 0;">
+      <a href="https://go.hotmart.com/N100172556W" class="btn-primary pulse" onclick="window.open('https://go.hotmart.com/N100172556W','_blank'); return false;">💫 INICIAR MI RENACIMIENTO</a>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+      © 2025 Manual del SER Humano · @sufrimosporquequeremos<br/>
+      <small>Garantía de satisfacción • Pago seguro • Descarga inmediata</small>
+    </footer>
+
+  </div>
 
   <script>
-    // Smooth scroll para enlaces internos
+    // Smooth scroll
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       anchor.addEventListener('click', function(e) {
         e.preventDefault();
-        var target = document.querySelector(this.getAttribute('href'));
+        const target = document.querySelector(this.getAttribute('href'));
         if (target) target.scrollIntoView({ behavior: 'smooth', block: 'start' });
       });
     });
