--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <!-- HERO -->
     <section class="hero">
       <div style="margin: 20px 0;">
-        <img src="https://i.imgur.com/lNVRGt6.jpg" alt="Manual del SER Humano">
+        <img src="https://i.imgur.com/lNVRGt6.Foto.jpg" alt="Manual del SER Humano">
       </div>
       <h1>Esto no es un libro cualquiera</h1>
       <p>Este manual es un espejo. Te mostrará lo que necesitas recordar,<br/>incluso si te incomoda. ¿Estás listo para crear tu nueva versión?</p>
