--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <!-- Importar widget de Hotmart -->
   <script type="text/javascript">
     function importHotmart(){
-      var imported = document.createElement('script');
-      imported.src = 'https://static.hotmart.com/checkout/widget.min.js';
-      document.head.appendChild(imported);
-      var link = document.createElement('link');
-      link.rel = 'stylesheet';
-      link.type = 'text/css';
-      link.href = 'https://static.hotmart.com/css/hotmart-fb.min.css';
-      document.head.appendChild(link);
+      var js = document.createElement('script');
+      js.src = 'https://static.hotmart.com/checkout/widget.min.js';
+      js.async = true;
+      document.head.appendChild(js);
+
+      var css = document.createElement('link');
+      css.rel = 'stylesheet';
+      css.href = 'https://static.hotmart.com/css/hotmart-fb.min.css';
+      document.head.appendChild(css);
     }
     importHotmart();
   </script>
@@ -56,6 +57,7 @@
       border-radius: 24px;
       margin-bottom: 40px;
       transition: background 0.2s;
+      cursor: pointer;
     }
     .btn-primary:hover {
       background: linear-gradient(90deg, #DA70D6, #8A2BE2);
@@ -95,6 +97,27 @@
       color: #8A2BE2;
       font-weight: bold;
     }
+    .offer {
+      background: linear-gradient(135deg, #8A2BE2, #DA70D6);
+      color: white;
+      padding: 30px 20px;
+      border-radius: 15px;
+      margin: 40px 0;
+      text-align: center;
+    }
+    .offer h3 {
+      margin-bottom: 20px;
+      font-size: 1.3rem;
+    }
+    .offer p {
+      font-size: 1rem;
+      margin-bottom: 20px;
+      font-weight: bold;
+    }
+    .offer a {
+      background: rgba(255,255,255,0.2);
+      border: 2px solid white;
+    }
     .testimonial {
       font-style: italic;
       margin: 30px 0;
@@ -122,18 +145,19 @@
       flex-direction: column;
       gap: 12px;
       margin-bottom: 40px;
+      align-items: center;
     }
     .formulario img {
       width: 120px;
       border-radius: 6px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      margin: 20px auto;
+      margin: 20px 0;
     }
     .formulario h3 {
       color: #8A2BE2;
       margin-bottom: 20px;
     }
-    form button {
+    .formulario form button {
       padding: 12px;
       font-size: 1rem;
       background: #FF1493;
@@ -143,7 +167,7 @@
       cursor: pointer;
       transition: background 0.2s;
     }
-    form button:hover {
+    .formulario form button:hover {
       background: #FF69B4;
     }
     .pulse {
@@ -166,14 +190,14 @@
     <!-- HERO -->
     <section class="hero">
       <div style="margin: 20px 0;">
-        <img src="https://i.imgur.com/lNVRGt6.Foto.jpg" alt="Manual del SER Humano">
+        <img src="Foto.jpg" alt="Manual del SER Humano" style="width:220px; border-radius:8px; box-shadow:0 10px 30px rgba(0,0,0,0.3);">
       </div>
       <h1>Esto no es un libro cualquiera</h1>
       <p>Este manual es un espejo. Te mostrará lo que necesitas recordar,<br/>incluso si te incomoda. ¿Estás listo para crear tu nueva versión?</p>
       <div class="price">
         <span class="price-new oscillate">✨ ACCESO INMEDIATO ✨</span>
       </div>
-      <a href="https://pay.hotmart.com/N100172556W?checkoutMode=2" class="hotmart__button-checkout btn-primary pulse" data-code="N100172556W" data-checkout-mode="2">🧠 Transformar mi vida ahora</a>
+      <a href="https://pay.hotmart.com/N100172556W?checkoutMode=2" class="hotmart__button-checkout btn-primary pulse" data-code="N100172556W" data-checkout-mode="2" target="_blank" rel="noopener noreferrer">🧠 Transformar mi vida ahora</a>
     </section>
 
     <!-- BENEFICIOS -->
@@ -186,73 +210,10 @@
     </section>
 
     <!-- OFERTA IMPERDIBLE -->
-    <section style="background: linear-gradient(135deg, #8A2BE2, #DA70D6); color: white; padding: 30px 20px; border-radius: 15px; margin: 40px 0; text-align: center;">
-      <h3 style="margin-bottom: 20px; font-size: 1.3rem;">🔥 OFERTA IMPERDIBLE 🔥</h3>
-      <p style="font-size: 1rem; margin-bottom: 20px; font-weight: bold;">Si compras el Manual del SER Humano recibes 3 bonos adicionales:</p>
-      <div style="text-align: left; margin: 20px 0;">
-        <div style="margin: 15px 0; padding-left: 25px; position: relative;"><span style="position: absolute; left: 0; top: 0;">⚡</span><strong>+ Las Leyes Invisibles</strong></div>
-        <div style="margin: 15px 0; padding-left: 25px; position: relative;"><span style="position: absolute; left: 0; top: 0;">🧸</span><strong>+ Sanando tu Niño Interior</strong></div>
-        <div style="margin: 15px 0; padding-left: 25px; position: relative;"><span style="position: absolute; left: 0; top: 0;">👥</span><strong>+ Acceso a la Comunidad</strong></div>
-      </div>
-      <div style="border-top: 2px solid rgba(255,255,255,0.3); padding-top: 20px; margin-top: 25px;">
-        <p style="font-size: 1.3rem; font-weight: bold; margin: 15px 0;">✨ ACCESO INMEDIATO A TODO ✨</p>
-        <p style="font-size: 1rem; opacity: 0.9; margin: 10px 0;">🎯 Transformación completa garantizada</p>
-        <a href="https://pay.hotmart.com/N100172556W?checkoutMode=2" class="hotmart__button-checkout btn-primary pulse" data-code="N100172556W" data-checkout-mode="2" style="background: rgba(255,255,255,0.2); border: 2px solid white;">💫 OBTENER TODO AHORA</a>
-      </div>
-    </section>
-
-    <!-- TESTIMONIAL -->
-    <section class="testimonial">
-      "Después de leer este manual, por primera vez en años pude acceder a mi estado de flow. Las técnicas son claras y realmente funcionan."
-      <div class="testimonial-author">- María G., Artista</div>
-    </section>
-
-    <!-- GARANTÍA -->
-    <section class="guarantee">
-      🛡️ <strong>Garantía de 7 días</strong><br/>
-      Tranquilo, si este manual no es lo que esperabas te devuelvo el 100% de tu dinero
-    </section>
-
-    <!-- FORMULARIO -->
-    <section class="formulario" id="comprar">
-      <img src="https://i.imgur.com/lNVRGt6.jpg" alt="Manual del SER Humano">
-      <h3>Obtén tu copia digital inmediata</h3>
-      <form onsubmit="window.open('https://go.hotmart.com/N100172556W','_blank'); return false;">
-        <input type="text" placeholder="Nombre completo" required />
-        <input type="email" placeholder="Correo electrónico" required />
-        <button type="submit" class="pulse">🔓 ACTIVAR MI DESPERTAR</button>
-      </form>
-      <p style="font-size: 0.8rem; color: #666;">⚡ Acceso inmediato • 🔒 Pago seguro • 🎯 Resultados garantizados</p>
-    </section>
-
-    <!-- SEGUNDO TESTIMONIAL -->
-    <section class="testimonial">
-      "Mi autoconcepto cambió completamente. Dejé de identificarme con mis pensamientos limitantes y encontré mi verdadera esencia."
-      <div class="testimonial-author">- Carlos R., Psicólogo</div>
-    </section>
-
-    <!-- CTA FINAL -->
-    <section style="margin: 40px 0;">
-      <a href="https://go.hotmart.com/N100172556W" class="btn-primary pulse" onclick="window.open('https://go.hotmart.com/N100172556W','_blank'); return false;">💫 INICIAR MI RENACIMIENTO</a>
-    </section>
-
-    <!-- FOOTER -->
-    <footer>
-      © 2025 Manual del SER Humano · @sufrimosporquequeremos<br/>
-      <small>Garantía de satisfacción • Pago seguro • Descarga inmediata</small>
-    </footer>
-
-  </div>
-
-  <script>
-    // Smooth scroll
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function(e) {
-        e.preventDefault();
-        const target = document.querySelector(this.getAttribute('href'));
-        if (target) target.scrollIntoView({ behavior: 'smooth', block: 'start' });
-      });
-    });
-  </script>
-</body>
-</html>
+    <section class="offer">
+      <h3>🔥 OFERTA IMPERDIBLE 🔥</h3>
+      <p>Si compras el Manual del SER Humano recibes 3 bonos adicionales:</p>
+      <div style="text-align:left; margin:20px 0;">
+        <div style="margin:15px 0; padding-left:25px; position:relative;"><span style="position:absolute; left:0; top:0;">⚡</span><strong>+ Las Leyes Invisibles</strong></div>
+        <div style="margin:15px 0; padding-left:25px; position:relative;"><span style="position:absolute; left:0; top:0;">🧸</span><strong>+ Sanando tu Niño Interior</strong></div>
+        <div style="margin:15px 0; padding-left:25px; position:relative;"><span style="position:absolute; left:0; top:0;">👥
