--- a/index.html
+++ b/index.html
@@ -115,8 +115,19 @@
       font-weight: bold;
     }
     .offer a {
-      background: rgba(255,255,255,0.2);
-      border: 2px solid white;
+      display:inline-block;
+      padding:12px 32px;
+      font-size:1rem;
+      color:#fff;
+      background:rgba(255,255,255,0.2);
+      border:2px solid white;
+      border-radius:24px;
+      text-decoration:none;
+      margin-top:15px;
+      transition:background 0.2s;
+    }
+    .offer a:hover {
+      background:rgba(255,255,255,0.4);
     }
     .testimonial {
       font-style: italic;
