--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="price">
         <span class="price-new oscillate">✨ ACCESO INMEDIATO ✨</span>
       </div>
-      <a href="https://go.hotmart.com/N100172556W" target="_blank" rel="noopener noreferrer" class="btn-primary pulse">🧠 Transformar mi vida ahora</a>
+      <a href="https://go.hotmart.com/N100172556W" target="_blank" class="btn-primary pulse">🧠 Transformar mi vida ahora</a>
     </section>
 
     <!-- BENEFICIOS -->
@@ -202,7 +202,7 @@
       <div style="border-top: 2px solid rgba(255,255,255,0.3); padding-top: 20px; margin-top: 25px;">
         <p style="font-size: 1.3rem; font-weight: bold; margin: 15px 0;">✨ ACCESO INMEDIATO A TODO ✨</p>
         <p style="font-size: 1rem; opacity: 0.9; margin: 10px 0;">🎯 Transformación completa garantizada</p>
-        <a href="https://go.hotmart.com/N100172556W" target="_blank" rel="noopener noreferrer" class="btn-primary pulse" style="margin-top: 15px; background: rgba(255,255,255,0.2); border: 2px solid white;">💫 OBTENER TODO AHORA</a>
+        <a href="https://go.hotmart.com/N100172556W" target="_blank" class="btn-primary pulse" style="margin-top: 15px; background: rgba(255,255,255,0.2); border: 2px solid white;">💫 OBTENER TODO AHORA</a>
       </div>
     </section>
 
@@ -239,7 +239,7 @@
 
     <!-- CTA FINAL -->
     <section style="margin: 40px 0; text-align: center;">
-      <a href="https://go.hotmart.com/N100172556W" target="_blank" rel="noopener noreferrer" class="btn-primary pulse" onclick="window.open('https://go-hotmart.com/N100172556W','_blank'); return false;">💫 Inicia tu transformación</a>
+      <a href="https://go.hotmart.com/N100172556W" target="_blank" class="btn-primary pulse">💫 Inicia tu transformación</a>
     </section>
 
     <!-- FOOTER -->
