--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <input type="email" placeholder="Correo electrónico" required />
         <button type="submit" class="pulse">🔓 ACTIVAR MI DESPERTAR</button>
       </form>
-      <p style="font-size:0.8rem;color:#666;margin-top:10px;">⚡ Acceso inmediato • 🔒 Pago seguro • 🎯 Resultados garantizados</p>
+      <p style="font-size:0.8rem;color:#666;margin-top:10px;">⚡ Acceso inmediato • 🔒 Pago seguro •</p>
     </section>
 
     <!-- SEGUNDO TESTIMONIAL -->
